--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,3 +1,12 @@
 body{
-  
+  @extend %quicksand-500;
+  font-size: 16px;
+  line-height: 26px;
+  color: $default;
+}
+
+.container{
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 15px;
 }
