--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,12 +1,29 @@
+html,
+body{
+  height: 100%;
+}
+
 body{
   @extend %quicksand-500;
   font-size: 16px;
   line-height: 26px;
   color: $default;
+  display: flex;
+  flex-direction: column;
+}
+
+.main{
+  flex-grow: 1;
 }
 
 .container{
   max-width: 1200px;
   margin: 0 auto;
   padding: 15px;
+}
+a{
+  @extend %quicksand-500;
+  font-size: 16px;
+  line-height: 26px;
+  color: $default;
 }
