--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -59,9 +59,106 @@
   }
 }
 
+footer{
+  background-color: $bg;
+}
+.footer-top{
+  padding: 70px 0 40px;
+  border-bottom: 1px solid #ececec;
+  display: flex;
+  &__contact{
+    width: 250px;
+    margin-right: 50px;
+  }
+  &__nav{
+    width: 170px;
+    margin-right: 30px;
+  }
+  &__item-form{
+    max-width: 470px
+  }
+  &__logo{
+    display: block;
+    margin-bottom: 32px;
+  }
+  &__address,
+  &__email,
+  &__phone{
+    display: block;
+    margin-bottom: 14px;
+  }
+  &__social-list{
+    display: flex;
+    align-items: center;
+    margin-top: 30px;
+  }
+  &__social-item + .footer-top__social-item{
+    margin-left: 20px;
+  }
+  &__social-link{
+    transition: all .3s;
+    path{
+      fill: $default;
+    }
+    &:hover{
+      path{
+        fill: $accent;
+      }
+    }
+  }
 
+  &__title{
+    margin-bottom: 40px;
+    color: $title;
+    @extend %roboto-500;
+    font-size: 22px;
+    line-height: 1;
+  }
+  &__link{
+    margin-bottom: 14px;
+    display: block;
+  }
+  &__text{
+    margin-bottom: 25px;
+  }
+  &__form-input{
+    background-color: #fff;
+    max-width: 320px;
+    width: 100%;
+    border: none;
+    padding: 15px;
+    box-shadow: 0px 7px 20px 0px rgba(192, 192, 192, 0.3);
+    &::placeholder{
+      color: $default;
+      font-size: 16px;
+    }
+  }
+  &__form-btn{
+    background-color: $accent;
+    border: none;
+    color: #fff;
+    text-transform: uppercase;
+    padding: 15px 24px;
+    box-shadow: 0px 7px 20px 0px rgba(255, 17, 48, 0.3);
+    cursor: pointer;
+  }
+}
 
+.footer-bottom{
+  height: 74px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 12px;
 
+  &__accept{
+    display: flex;
+    align-items: center;
+  }
+  &__accept-img{
+    margin-left: 25px;
+  }
+}
 
 
 
