--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -23,3 +23,14 @@ $bg: #f6f6f6;
   font-family: 'Roboto-Bold', sans-serif;
   font-weight: 700;
 }
+
+
+%btn{
+  text-transform: uppercase;
+  color: #fff;
+  background-color: $accent;
+  @extend %roboto-400;
+  padding: 12px 26px;
+  box-shadow: 0px 10px 25px 0px rgba(254, 62, 87, 0.3);
+}
+
