--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -34,3 +34,9 @@ $bg: #f6f6f6;
   box-shadow: 0px 10px 25px 0px rgba(254, 62, 87, 0.3);
 }
 
+@function max($numbers...){
+  @return m#{a}x(#{$numbers});
+}
+@function min($numbers...){
+  @return m#{i}n(#{$numbers});
+}
