--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -505,7 +505,70 @@ footer{
   margin: 0 auto;
 }
 
+.promo{
+  background-image: url('../images/promo-bg.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  padding: 150px 0 160px;
+  text-align: center;
+  &__inner{
+    max-width: 570px;
+    width: 100%;
+    margin-left: auto;
+  }
+  &__subtitle{
+    color: $accent;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+    font-size: 22px;
+  }
+  &__clock{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 55px;
+  }
+  &__clock-item{
+    background-color: #fff;
+    height: 120px;
+    width: 120px;
+    border-radius: 50%;
+    box-shadow: 0px 10px 40px 0px rgba(187, 187, 187, 0.3);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    span{
+      @extend %roboto-700;
+      font-size: 48px;
+      color: $title;
+      margin: 10px 0;
+    }
+  }
+  &__text{
+    color: $default;
+    @extend %quicksand-500;
+  }
 
+  &__link{
+    border: 1px solid $accent;
+    padding: 16px 30px;
+    color: $title;
+    text-transform: uppercase;
+    display: inline-block;
+    margin-top: 55px;
+  }
+}
+.partners{
+  padding-top: 60px;
+  &__list{
+    height: 170px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
 
 
 @import 'media';
