--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -21,6 +21,7 @@ body{
   margin: 0 auto;
   padding: 15px;
 }
+
 a{
   @extend %quicksand-500;
   font-size: 16px;
@@ -40,4 +41,50 @@ a{
   text-align: center;
   max-width: 572px;
   margin: 0 auto 56px;
+}
+
+.breadcrumbs{
+  display: inline-flex;
+  justify-content: center;
+  padding-left: 25px;
+  position: relative;
+  &::before{
+    position: absolute;
+    content: '';
+    background-image: url('../images/icons/home-icon.svg');
+    left: 0;
+    top: 4px;
+    width: 16px;
+    height: 16px;
+    }
+  &__list{
+    display: flex;
+  }
+  &__item{
+    padding-right: 40px;
+    color: #727272;
+    position: relative;
+    &::after{
+      position: absolute;
+      content: '';
+      background-image: url('../images/icons/angle-right.svg');
+      right: 15px;
+      top: 9px;
+      width: 9px;
+      height: 10px;
+    }
+    &:last-child{
+      color: $accent;
+      padding-right: 0;
+      &::after{
+        display: none;
+      }
+    }
+  }
+  &__link{
+    color: inherit;
+    @extend %quicksand-500;
+    font-size: 16px;
+  }
+
 }
