--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -92,3 +92,44 @@ a{
 .header--page-404{
   background-color: $bg;
 }
+
+.pagination{
+  display: flex;
+  justify-content: center;
+  padding: 30px 0;
+  &__arrow{
+    text-transform: uppercase;
+    position: relative;
+    &::before{
+      content: '';
+      position: absolute;
+      width: 5px;
+      height: 10px;
+      top: 8px;
+    }
+  }
+  &__prev{
+    padding-left: 15px;
+    &::before{
+      left: 0;
+      background-image: url('../images/icons/angle_left.svg');
+    }
+  }
+  &__next{
+    padding-right: 15px;
+    &::before{
+      right: 0;
+      background-image: url('../images/icons/angle_right.svg');
+    }
+  }
+  .pagination__list{
+    display: flex;
+    padding: 0 35px;
+  }
+  &__item{
+    padding: 0 15px;
+  }
+  &__link--active{
+    color: $accent;
+  }
+}
