--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -34,6 +34,16 @@ $bg: #f6f6f6;
   box-shadow: 0px 10px 25px 0px rgba(254, 62, 87, 0.3);
 }
 
+%checkbox-hidden{
+  height: 1px;
+  width: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  position: absolute;
+}
+
+
+
 @function max($numbers...){
   @return m#{a}x(#{$numbers});
 }
