--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -432,6 +432,86 @@ footer{
 .product-item{
   max-width: 370px;
   text-align: center;
+  &.product-item--list{
+    min-width: 100%;
+    display: flex;
+    text-align: left;
+    &:hover{
+      .product-item__link-box {
+        transform: translateY(-280%);
+      }
+    }
+    .product-item__img-box{
+      height: 250px;
+      min-width: 200px;
+      margin-bottom: 0;
+      img{
+        height: 250px;
+      }
+    }
+    .product-item__text{
+      margin-bottom: 25px;
+    }
+    .product-item__btn{
+      color: #fff;
+      padding: 12px 40px;
+      background-color: $title;
+      border: none;
+      cursor: pointer;
+      &:hover{
+        background-color: $accent;
+        box-shadow: 0px 10px 25px 0px rgba(254, 62, 87, 0.3);
+      }
+    }
+    .product-item__link-box{
+      background-color: transparent;
+      width: 115px;
+      box-shadow: none;
+      bottom: auto;
+      .product-item__link{
+        width: 50px;
+        height: 50px;
+        background-color: #fff;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      .product-item__link--line{
+        display: none;
+      }
+    }
+    .product-item__content-box{
+      display: block;
+    }
+    .product-item__title{
+      order: -1;
+      width: 100%;
+      padding: 0;
+      margin-bottom: 10px;
+    }
+    .product-item__price{
+      order: -1;
+      margin-left: -12px;
+    }
+    .star{
+      margin-left: 23px;
+    }
+    .product-item__box{
+      display: flex;
+      flex-wrap: wrap;
+      align-items: baseline;
+    }
+    .product-item__wrapper-box{
+      padding: 30px 40px;
+      border: 1px solid #ececec;
+      border-left: none;
+    }
+  }
+  &__content-box{
+    display: none;
+  }
+
   &:hover{
     .product-item__link-box{
       transform: translateY(0);
@@ -452,7 +532,6 @@ footer{
     left: 0;
     right: 0;
     margin: 0 auto;
-    padding: 14px 22px;
     width: 212px;
     height: 50px;
     border-radius: 25px;
@@ -758,6 +837,311 @@ footer{
     @extend %btn
   }
 }
+
+.shop{
+  padding: 120px 0 110px;
+  &__inner{
+    display: flex;
+  }
+  &__filters{
+    width: 370px;
+    margin-right: 30px;
+  }
+}
+
+.filter{
+  &__item{
+    padding: 35px 30px 40px;
+    border: 1px solid #ececec;
+    margin-bottom: 40px;
+  }
+  &__title{
+    @extend %roboto-400;
+    color: $title;
+    font-size: 22px;
+    text-transform: uppercase;
+    margin-bottom: 25px;
+  }
+}
+
+.filter-search{
+  &__form{
+    display: flex;
+  }
+  &__input{
+    background-color: $bg;
+    border: none;
+    height: 50px;
+    width: 260px;
+    padding: 0 5px 0 16px;
+    &::placeholder{
+      @extend %quicksand-500;
+      font-size: 16px;
+      color: $default;
+    }
+  }
+  &__btn{
+    background-color: $accent;
+    border: none;
+    height: 50px;
+    width: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+  }
+}
+
+.filter-price{
+  &__label{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 30px;
+  }
+  
+  &__btn{
+    @extend %btn;
+    border: none;
+    width: 100px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+  }
+}
+
+.irs--flat .irs-line {
+  top: 13px;
+  height: 5px;
+  background-color: #ececec;
+  border-radius: 0;
+}
+.irs--flat .irs-handle {
+  top: 0;
+  width: 30px;
+  height: 30px;
+  background-color: #fff;
+  box-shadow: 0px 0px 13px 0px rgba(90, 90, 90, 0.2);
+}
+.irs--flat .irs-handle>i:first-child {
+  display: none;
+}
+.irs--flat .irs-bar {
+  top: 13px;
+  height: 5px;
+  background-color: $accent;
+}
+.irs-from,
+.irs-to,
+.irs-single {
+  display: none;
+}
+.irs--flat .irs-min,
+.irs--flat .irs-max {
+  display: none;
+}
+.irs--flat {
+  height: 30px;
+}
+
+.filter-color{
+  &__label{
+    padding-bottom: 20px;
+    border-bottom: 1px solid #ececec;
+    display: flex;
+    justify-content: space-between;
+    & + .filter-color__label{
+      padding-top: 20px;
+    }
+    &:last-child{
+      border-bottom: none;
+      padding-bottom: 0;
+    }
+  }
+  &__input{
+    @extend %checkbox-hidden;
+    &:checked + .filter-color__checkbox {
+      background-image: url('../images/icons/check-on.svg');
+      background-repeat: no-repeat;
+      background-position: center;
+      
+    }
+  }
+  &__checkbox{
+    height: 16px;
+    width: 16px;
+    position: absolute;
+    margin-left: -16px;
+    margin-top: 7px;
+  }
+  &__checkbox--blue{
+    background-color: #00aeef;
+  }
+  &__checkbox--red{
+    background-color: #f52574;
+  }
+  &__checkbox--green{
+    background-color: #24d4ac;
+  }
+  &__checkbox--orange{
+    background-color: #ff7e00;
+  }
+  &__checkbox--black{
+    background-color: #000000;
+  }
+  &__checkbox--purple{
+    background-color: #923899;
+  }
+}
+
+.filter-size{
+  &__label{
+    padding-left: 35px;
+    margin-bottom: 20px;
+    display: block;
+  }
+  &__input{
+    @extend %checkbox-hidden;
+    &:checked + .filter-size__checkbox{
+      background-image: url('../images/icons/check-on-red.svg');
+      background-repeat: no-repeat;
+      background-position: center;
+      border: 1px solid $accent;
+      & + .filter-size__text{
+        color: $accent;
+      }
+    }
+  }
+  &__checkbox{
+    width: 20px;
+    height: 20px;
+    border: 1px solid #909090;
+    position: absolute;
+    border-radius: 50%;
+    margin-left: -35px;
+    margin-top: 3px;
+  }
+}
+
+.filter-category{
+  &__label{
+    display: block;
+    margin-bottom: 15px;
+    cursor: pointer;
+    &:last-child{
+      margin-bottom: 0;
+    }
+  }
+  &__input{
+    @extend %checkbox-hidden;
+    &:checked + .filter-category__checkbox{
+      background-color: $accent;
+      color: #fff;
+    }
+  }
+  &__checkbox{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: $title;
+    background-color: #f6f6f6;
+    padding: 16px 20px;
+  }
+}
+
+.filter-tags{
+  &__label{
+    cursor: pointer;
+    display: inline-block;
+    margin-bottom: 20px;
+    margin-right: 15px;
+    &:last-child {
+        margin-bottom: 0;
+      }
+  }
+  &__input{
+    @extend %checkbox-hidden;
+    &:checked + .filter-tags__checkbox {
+        background-color: $accent;
+        border-color: $accent;
+        color: #fff;
+      }
+  }
+  &__checkbox{
+    border: 1px solid $default;
+    padding: 12px 16px;
+  }
+}
+
+.shop-content{
+  width: 100%;
+  &__inner{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    border-bottom: 1px solid #ececec;
+    .product-item{
+      margin-bottom: 40px;
+    }
+  }
+  &__filter{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: 1px solid #ececec;
+    padding: 20px 26px;
+    margin-bottom: 40px;
+  }
+  &__filter-buttons{
+    display: flex;
+    align-items: center;
+  }
+  &__filter-btn{
+    padding: 0;
+    border: none;
+    background-color: transparent;
+    margin-left: 15px;
+    line-height: 0;
+    cursor: pointer;
+    &.shop-content__filter-btn--active{
+      path{
+        fill: $accent;
+      }
+    }
+  }
+}
+
+.jq-selectbox__select {
+  height: 32px;
+  margin-left: 30px;
+  padding: 0 30px 0 0;
+  border: none;
+  background: transparent;
+  box-shadow: none;
+  @extend %quicksand-500;
+  color: $default;
+  text-shadow: none;
+  &:hover{
+    background: transparent;
+  }
+}
+.jq-selectbox__trigger{
+  border-left: none;
+}
+
+.jq-selectbox__trigger-arrow {
+  position: absolute;
+  top: 14px;
+  right: 12px;
+  width: 10px;
+  height: 5px;
+  border: none;
+  background-image: url('../images/icons/angle-down.svg');
+}
+
+
 
 
 
