--- a/app/scss/_libs.scss
+++ b/app/scss/_libs.scss
@@ -8,5 +8,5 @@
 
 @import '../../node_modules/jquery-form-styler/dist/jquery.formstyler';
 
-@import '../../node_modules/jquery-form-styler/dist/jquery.formstyler.theme';
+// @import '../../node_modules/jquery-form-styler/dist/jquery.formstyler.theme';
 
