--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -32,9 +32,11 @@ $bg: #f6f6f6;
   @extend %roboto-400;
   padding: 15px 26px;
   box-shadow: 0px 10px 25px 0px rgba(254, 62, 87, 0.3);
+  cursor: pointer;
 }
 
-%checkbox-hidden{
+%checkbox-hidden,
+%radio-hidden{
   height: 1px;
   width: 1px;
   overflow: hidden;
