--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -711,31 +711,6 @@ footer{
   &__item-box{
     padding: 30px 30px;
   }
-  &__item-info{
-    display: flex;
-    justify-content: space-between;
-    @extend %quicksand-500;
-    margin-bottom: 20px;
-  }
-  &__item-author,
-  &__item-date{
-    padding-left: 30px;
-    position: relative;
-    &::before{
-      content: '';
-      position: absolute;
-      height: 20px;
-      width: 20px;
-      left: 0;
-      top: 3px;
-    }
-  }
-  &__item-author::before{
-    background-image: url('../images/icons/user-grey.svg');
-  }
-  &__item-date::before{
-    background-image: url('../images/icons/time-grey.svg');
-  }
   &__item-titlelink{
     font-size: 22px;
     line-height: 32px;
@@ -756,6 +731,33 @@ footer{
     top: 8px;
   }
 }
+
+.blog-box{
+  display: flex;
+  justify-content: space-between;
+  @extend %quicksand-500;
+  margin-bottom: 20px;
+  &__author,
+  &__date{
+    padding-left: 30px;
+    position: relative; 
+    &::before {
+      content: '';
+      position: absolute;
+      height: 20px;
+      width: 20px;
+      left: 0;
+      top: 3px;
+    }
+  }
+  &__author::before{
+    background-image: url('../images/icons/user-grey.svg');
+  }
+  &__date::before{
+    background-image: url('../images/icons/time-grey.svg');
+  }
+}
+
 
 .modal{
   padding-top: 100px;
@@ -1554,6 +1556,192 @@ footer{
     }
   }
 }
+
+.blog-page{
+  padding: 120px 0 60px;
+  &__item--slider{
+    .blog-page__item-box {
+      margin-top: -8px;
+    }
+  }
+  &__slider{
+    .slick-prev,
+    .slick-next{
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      z-index: 5;
+      width: 40px;
+      height: 40px;
+      background-color: $accent;
+      path{
+        fill: #fff;
+      }
+      border: none;
+      border-radius: 50%;
+      box-shadow: 0px 7px 20px 0px rgba(254, 62, 87, 0.3);
+      cursor: pointer;
+    }
+    .slick-disabled{
+      background-color: #fff;
+      box-shadow: 0px 7px 20px 0px rgba(168, 168, 168, 0.3);
+      path{
+        fill: $accent;
+      }
+    }
+    .slick-prev{
+      left: 40px;
+    }
+    .slick-next{
+      right: 40px;
+    }
+  }
+  &__inner{
+    display: flex;
+    justify-content: space-between;
+  }
+  &__content{
+    width: 770px;
+    margin-right: 30px;
+  }
+  &__aside{
+    width: 370px;
+  }
+  &__item{
+    margin-bottom: 60px;
+    &.blog-page__item--no-image{
+      border-top: 1px solid #ececec;    
+      box-shadow: 0px 20px 60px 0px rgba(202, 202, 202, 0.35);          
+    }
+  }
+  &__item-link{
+    display: block;
+    color: inherit;
+    font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
+  }
+  &__item-img{
+    max-width: 770px;
+    height: 450px;
+    object-fit: cover;
+    display: block;
+  }
+  &__item-box{
+    border: 1px solid #ececec;
+    border-top: none;
+    padding: 40px;
+  }
+  &__item-title{
+   color: $title;
+   @extend %roboto-500;
+   font-size: 22px;
+   line-height: 32px;
+   margin-bottom: 20px;
+   transition: all .3s;
+   &:hover{
+    color: $accent;
+   }
+  }
+  .blog-box{
+    justify-content: start;
+    &__author{
+      margin-right: 30px;
+    }
+  }
+}
+
+.person{
+  border: 1px solid #ececec;
+  margin-bottom: 40px;
+  text-align: center;
+  padding: 40px 25px;
+  &__img{
+    display: inline-block;
+    width: 160px;
+    height: 160px;
+    object-fit: cover;
+    margin: 0 auto 35px;
+  }
+  &__name{
+    @extend %roboto-700;
+    font-size: 18px;
+    color: $title;
+    margin-bottom: 10px;
+  }
+  &__position{
+    color: $accent;
+    margin-bottom: 25px;
+  }
+  &__text{
+    margin-bottom: 25px;
+  }
+  &__social-link{
+    margin: 0 8px;
+    path{
+      fill: $default;
+      transition: all .3s;
+    }
+    &:hover{
+      path{
+        fill: $accent;
+      }
+    }
+  }
+}
+
+.latest-post{
+  padding: 35px 30px 40px;
+  border: 1px solid #ececec;
+  margin-bottom: 40px;
+  &__title{
+    @extend %roboto-400;
+    font-size: 22px;
+    color: $title;
+    text-transform: uppercase;
+    margin-bottom: 35px;
+  }
+  &__item{
+    display: flex;
+    margin-bottom: 20px;
+    & + .latest-post__item{
+      border-top: 1px solid #ececec;
+      padding-top: 20px;
+    }
+  }
+  &__img-link{
+    margin-right: 20px;
+    min-width: 80px;
+  }
+  &__img{
+    width: 80px;
+    height: 80px;
+    object-fit: cover;
+  }
+  &__title-link{
+    @extend %roboto-400;
+    font-size: 18px;
+    color: $title;
+    line-height: 28px;
+  }
+  &__date{
+    padding-left: 26px;
+    position: relative;
+    &::before{
+      content: '';
+      position: absolute;
+      left: 0;
+      top: 5px;
+      width: 16px;
+      height: 16px;
+      background-image: url('../images/icons/calendar.svg');
+    }
+  }
+}
+
+
+
+
 
 
 
