--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1876,9 +1876,120 @@ footer{
 
 }
 
+.map{
+  padding: 120px 0;
+}
+#map{
+  width: 100%;
+  height: 450px;
+}
 
+.contact{
+  padding-bottom: 120px;
+  &__inner{
+    display: flex;
+  }
+  &__info{
+    max-width: 370px;
+    margin-right: 30px;
+  }
+  &__info-title{
+    color: $title;
+    @extend %roboto-700;
+    font-size: 48px;
+    line-height: 58px;
+    margin-bottom: 20px;
+  }
+  &__info-text{
+    margin-bottom: 60px;
+  }
+  &__info-item{
+    margin-top: 55px;
+    color: $title;
+    padding-left: 80px;
+    position: relative;
+    &::before{
+      content: '';
+      position: absolute;
+      width: 60px;
+      height: 60px;
+      left: 0;
+      top: -5px;
+      box-shadow: 0px 5px 20px 0px rgba(146, 146, 146, 0.3);
+    }
+    &::after{
+      content: '';
+      position: absolute;
+      width: 20px;
+      height: 20px;
+      left: 20px;
+      top: 15px;
+      background-image: url('../images/icons/phone_icon.svg');
+    }
+  }
+  &__info-item--location::after{
+      width: 14px;
+      height: 20px;
+      left: 23px;
+      top: 15px;
+      background-image: url('../images/icons/location_icon.svg');
+    }
 
+  &__info-item--email::after{
+      width: 18px;
+      height: 20px;
+      left: 21px;
+      top: 15px;
+      background-image: url('../images/icons/mail_icon.svg');
+    }
+  &__info-phone{
+    display: block;
+    color: inherit;
+  }
+  &__form{
+    padding: 60px 40px;
+    width: 100%;
+    box-shadow: 0px 10px 40px 0px rgba(172, 172, 172, 0.3);
 
+  }
+  &__form-title{
+    @extend %roboto-700;
+    color: $title;
+    font-size: 22px;
+    line-height: 58px;
+    margin-bottom: 24px;
+  }
+  &__form-box{
+    display: flex;
+    justify-content: space-between;
+    input{
+      width: 330px;
+    }
+  }
+  &__form-input{
+    width: 100%;
+    padding: 20px;
+    margin-bottom: 30px;
+    background-color: $bg;
+    border: none;
+    display: block;
+    height: 60px;
+  }
+  &__form-textarea{
+    width: 100%;
+    padding: 20px;
+    margin-bottom: 30px;
+    border: none;
+    display: block;
+    height: 200px;
+    background-color: $bg;
+    resize: none;
+  }
+  &__form-btn{
+    @extend %btn;
+    border: none;
+  }
+}
 
 
 
