--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -145,6 +145,7 @@ footer{
     background-color: #fff;
     max-width: 320px;
     width: 100%;
+    margin-right: 3px;
     border: none;
     padding: 15px;
     box-shadow: 0px 7px 20px 0px rgba(192, 192, 192, 0.3);
