--- a/app/login.njk
+++ b/app/login.njk
@@ -11,55 +11,12 @@
   
 {% include 'app/module/_header/_header.html' %}
 
-
 <main class="main">
-  
-  <section class="top">
-    <div class="top__container" style="background-image: url('../images/top-bg.jpg');">
-      <div class="container">
-        <h2 class="top__title">LOG IN</h2>
-        <div class="breadcrumbs">        
-          <ul class="breadcrumbs__list">
-            <li class="breadcrumbs__item">
-              <a class="breadcrumbs__link" href="#">Home</a>
-            </li>
-            <li class="breadcrumbs__item">
-              <a class="breadcrumbs__link" href="#">Log in</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="modal">
-    <div class="container">
-      <div class="modal__links">
-        <a class="modal__link" href="#">REGISTER</a>
-        <a class="modal__link modal__link--active" href="#">LOGIN</a>
-      </div>
-      <form class="modal__form">
-        <label class="modal__label">
-          Username or email address*
-          <input class="modal__input" type="text" required>
-        </label>
-        <label class="modal__label">
-          Password*
-          <input class="modal__input" type="password" required>
-        </label>
-        <label class="modal__label">
-          <input type="checkbox">
-          Remember me
-        </label>
-        <button class="modal__btn" type="submit">LOG IN</button>
-        <a class="modal__form-link" href="#">Lost your password?</a>
-      </form>
-    </div>
-  </section>
+{% include 'app/module/_top/_top.html' %}
+{% include 'app/module/_modal/_modal.html' %}  
 </main>
 
-
-  {% include 'app/module/_footer/_footer.html' %}
+{% include 'app/module/_footer/_footer.html' %}
 
   <script src="js/main.min.js"></script>
 </body>
