--- a/app/module/_footer/_footer.scss
+++ b/app/module/_footer/_footer.scss
@@ -6,7 +6,6 @@ footer {
   padding: 70px 0 40px;
   border-bottom: 1px solid #ececec;
   display: flex;
-
   &__contact {
     width: 250px;
     margin-right: 50px;
@@ -73,7 +72,9 @@ footer {
   &__text {
     margin-bottom: 25px;
   }
-
+  &__form{
+    display: flex;
+  }
   &__form-input {
     background-color: #fff;
     max-width: 320px;
@@ -102,7 +103,8 @@ footer {
   justify-content: space-between;
   align-items: center;
   font-size: 12px;
-
+  flex-wrap: wrap;
+  padding: 0 10px;
   &__accept {
     display: flex;
     align-items: center;
@@ -110,5 +112,58 @@ footer {
 
   &__accept-img {
     margin-left: 25px;
+  }
+}
+
+@media (max-width: 1050px){
+  .footer-top{
+    flex-wrap: wrap;
+    &__item-form{
+      max-width: 100%;
+      margin-top: 30px;
+    }
+  }
+}
+
+@media (max-width: 860px){
+  .footer-top{
+    &__contact{
+      width: 100%;
+      margin-right: 0;
+      margin-bottom: 30px;
+    }
+  }
+}
+
+@media (max-width: 620px) {
+  .footer-bottom{
+    justify-content: center;
+    &__copy{
+      width: 100%;
+      text-align: center;
+    }
+  }
+}
+
+@media (max-width: 450px) {
+  .footer-top{
+    &__form{
+      flex-wrap: wrap;
+    }
+    &__form-input{
+      max-width: 100%;
+      margin-right: 0;
+    }
+    &__form-btn{
+      width: 100%;
+    }
+    &__nav{
+      margin-top: 30px;
+    }
+  }
+  .footer-bottom{
+    &__accept-img{
+      margin-left: 15px;
+    }
   }
 }
