--- a/app/blog.njk
+++ b/app/blog.njk
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="css/blog.min.css">
+  <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
   
@@ -14,24 +15,8 @@
 
 <main class="main">
   
-  <section class="top">
-    <div class="top__container" style="background-image: url('../images/top-bg.jpg');">
-      <div class="container">
-        <h2 class="top__title">BLOG STANDARD</h2>
-        <div class="breadcrumbs">        
-          <ul class="breadcrumbs__list">
-            <li class="breadcrumbs__item">
-              <a class="breadcrumbs__link" href="#">Home</a>
-            </li>
-            <li class="breadcrumbs__item">
-              <a class="breadcrumbs__link" href="#">Blog page</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </section>
-
+{% include 'app/module/_top/_top.html' %}
+  
   <section class="blog-page">
     <div class="container">
       <div class="blog-page__inner">
