--- a/app/module/_blog/_blog.scss
+++ b/app/module/_blog/_blog.scss
@@ -103,3 +103,58 @@
     background-image: url('../images/icons/time-grey.svg');
   }
 }
+
+@media (max-width: 1230px) {
+  .blog{
+    &__items{
+      &::after{
+        right: 5px;
+      }
+    }
+  }
+}
+
+@media (max-width: 1200px) {
+  .blog{
+    &__items{
+     display: grid;
+     grid-template-columns: repeat(3, 1fr);
+     grid-gap: 30px;
+    }
+    &__item-box{
+      padding: 20px 15px;
+    }
+  }
+}
+
+@media (max-width: 1050px) {
+  .blog{
+    &__items{
+     grid-template-columns: repeat(2, 1fr);
+    }
+    &__item{
+      min-width: 100%;
+      img{
+        width: 100%;
+      }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .blog{
+    padding: 60px 0;
+    &__items{
+     grid-template-columns: repeat(1, 1fr);
+    }
+  }
+}
+
+@media (max-width: 375px) {
+  .blog-box{
+    display: block;
+    &__date{
+      margin-top: 10px;
+    }
+  }
+}
