--- a/app/module/_categories-info/_categories-info.scss
+++ b/app/module/_categories-info/_categories-info.scss
@@ -73,7 +73,6 @@
 
     &:nth-child(1) {
       grid-row: span 2;
-
       .categories__item-subtitle,
       .categories__item-link:hover {
         color: #5800e4;
@@ -86,7 +85,6 @@
       flex-direction: column;
       justify-content: center;
       padding-top: 0;
-
       .categories__item-subtitle,
       .categories__item-link:hover {
         color: $accent;
@@ -94,7 +92,6 @@
     }
 
     &:nth-child(3) {
-
       .categories__item-subtitle,
       .categories__item-link:hover {
         color: #ffb534;
@@ -102,7 +99,6 @@
     }
 
     &:nth-child(4) {
-
       .categories__item-subtitle,
       .categories__item-link:hover {
         color: #34c3ff;
@@ -125,5 +121,103 @@
     @extend %roboto-400;
     color: $title;
     transition: all .3s;
+  }
+}
+
+
+
+
+
+@media (max-width: 1235px){
+  .info{
+    &::after{
+      right: 0;
+    }
+    &__item{
+      width: 340px;
+      padding: 30px 20px;
+    }
+  }
+}
+
+@media (max-width: 1100px){
+  .info{
+    display: block;
+    &__item{
+     width: 100%;
+     padding: 20px;
+     margin-bottom: 20px;
+    }
+    &__item-title{
+      margin: 20px 0 10px;
+    }
+  }
+  .categories{
+    &__items{
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: auto;
+    }
+    &__item{
+      background-position: center top;
+      &:nth-child(1){
+        grid-row: auto;
+      }
+      &:nth-child(2){
+        background-position: center right;
+        grid-column: auto;
+      }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .categories{
+    &__items{
+      min-height: 385px;
+    }
+    &__item{
+      background-image: none !important;
+      display: flex;
+      justify-content: center;
+      padding-left: 15px;
+      padding-top: 0;
+      flex-direction: column;
+      &:nth-child(1){
+        background-color: #f4dff0;
+      }
+      &:nth-child(2){
+        background-color: #d7efef;
+      }
+      &:nth-child(3){
+        background-color: #fff6a7;
+      }
+      &:nth-child(4){
+        background-color: #ecf1f3;
+      }
+    }
+  }
+}
+
+@media (max-width: 620px) {
+  .categories-info {
+    padding: 120px 0 60px;
+  }  
+  .categories{
+    &__items{
+      grid-template-columns: repeat(1, 1fr);
+      grid-gap: 15px;
+    }
+    &__item{
+      padding: 15px 10px;
+    }
+  }
+}
+
+
+@media (max-width: 375px) {
+  .info {
+    &__item-title {
+      font-size: 20px;
+    }
   }
 }
