--- a/app/module/_promo/_promo.scss
+++ b/app/module/_promo/_promo.scss
@@ -59,3 +59,30 @@
     margin-top: 55px;
   }
 }
+
+@media (max-width: 620px){
+  .promo{
+    padding: 60px 0; 
+    &__clock{
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+    &__clock-item{
+      margin: 20px 36px;
+    }
+  }
+}
+
+@media (max-width: 450px){
+  .promo{
+    &__clock-item{
+      margin: 8px;
+    }
+    &__clock{
+      margin-top: 30px;
+    }
+    &__link{
+      margin-top: 30px;
+    }
+  }
+}
