--- a/app/module/_video-fashion/_video-fashion.scss
+++ b/app/module/_video-fashion/_video-fashion.scss
@@ -50,3 +50,42 @@
     @extend %btn;
   }
 }
+
+
+@media (max-width: 1050px){
+  .video-fashion{
+    &__inner{
+      display: block;
+    }
+    &__popup{
+      max-width: 100%;
+      background-position: center top;
+    }
+    &__content{
+      min-width: 100%;
+    }
+  }
+}
+
+@media (max-width: 620px) {
+  .video-fashion {
+    padding: 60px 0;
+    &__popup {
+      height: 270px;
+    }
+    &__subtitle{
+      padding-top: 40px;
+    }
+  }
+}
+
+@media (max-width: 375px) {
+  .video-fashion {
+    &__subtitle{
+      font-size: 18px;
+    }
+    &__title{
+      font-size: 30px;
+    }
+  }
+}
