--- a/app/register.njk
+++ b/app/register.njk
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="css/register.min.css">
+  <link rel="stylesheet" href="css/login.min.css">
 </head>
 <body>
   
@@ -13,24 +13,8 @@
 
 
 <main class="main">
+{% include 'app/module/_top/_top.html' %}
   
-  <section class="top">
-    <div class="top__container" style="background-image: url('../images/top-bg.jpg');">
-      <div class="container">
-        <h2 class="top__title">REGISTER</h2>
-        <div class="breadcrumbs">        
-          <ul class="breadcrumbs__list">
-            <li class="breadcrumbs__item">
-              <a class="breadcrumbs__link" href="#">Home</a>
-            </li>
-            <li class="breadcrumbs__item">
-              <a class="breadcrumbs__link" href="#">Register</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </section>
 
   <section class="modal">
     <div class="container">
