--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -45,6 +45,7 @@ a{
 
 .breadcrumbs{
   display: inline-flex;
+  flex-wrap: wrap;
   justify-content: center;
   padding-left: 25px;
   position: relative;
@@ -131,5 +132,20 @@ a{
   }
   &__link--active{
     color: $accent;
+  }
+}
+
+
+@media (max-width: 675px) {
+  .title{
+    font-size: 40px;
+    line-height: 48px;
+  }
+}
+
+@media (max-width: 620px) {
+  .title{
+    font-size: 32px;
+    line-height: 40px;
   }
 }
