--- a/app/scss/login.scss
+++ b/app/scss/login.scss
@@ -5,3 +5,5 @@
 @import 'global';
 @import '../module/_header/_header';
 @import '../module/_footer/_footer';
+@import '../module/_top/_top';
+@import '../module/_modal/_modal';
