--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -6,82 +6,6 @@
 
 
 
-.top {
-  &__container {
-    max-width: 1700px;
-    padding: 135px 0;
-    margin: 0 auto;
-    text-align: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: top center;
-  }
-
-  &__title {
-    font-size: 48px;
-    color: #15181d;
-    margin-bottom: 30px;
-    @extend %roboto-400;
-  }
-}
-
-
-
-
-.modal{
-  padding-top: 100px;
-  max-width: 570px;
-  margin: 0 auto 115px;
-  &__links{
-    text-align: center;
-    margin-bottom: 40px;
-  }
-  &__link{
-    font-size: 22px;
-    color: #909090;
-    @extend %roboto-400;
-    text-transform: uppercase;
-    margin: 0 30px;
-  }
-  &__link--active{
-    color: $accent;
-    @extend %roboto-700;
-  }
-  &__label{
-    display: block;
-    margin-bottom: 30px;
-  }
-  &__input{
-    display: block;
-    width: 100%;
-    border: none;
-    background-color: $bg;
-    margin-top: 4px;
-    height: 60px;
-    padding: 0 15px;
-  }
-  &__btn{
-    display: block;
-    background-color: #292929;
-    height: 60px;
-    width: 100%;
-    color: #fff;
-    cursor: pointer;
-    text-transform: uppercase;
-    margin-bottom: 18px;
-    @extend %roboto-400;
-    padding: 14px 0;
-    border: none;
-  }
-  &__form-link{
-    color: $accent;
-  }
-  &__text{
-    @extend %quicksand-500;
-    margin-bottom: 25px;
-  }
-}
-
 .page-404{
   padding: 120px 0;
   &__inner{
@@ -95,7 +19,7 @@
   }
   &__title{
     font-size: 48px;
-    line-height: 26px;
+    line-height: 52px;
     @extend %roboto-700;
     color: #28384f;
     margin-bottom: 40px;
@@ -117,6 +41,9 @@
   &__filters{
     width: 370px;
     margin-right: 30px;
+  }
+  &__filter-btn{
+    display: none;
   }
 }
 
